# simplecalc

./: CMakeLists.txt  lexer.rl
